# simple_axum_button_response

./: Cargo.toml  README.md  index.html  main.js  styles.css
.cargo/: config.toml
src/: app.rs  args.rs  buzzer.rs  camera.rs  camera_handler.rs  led.rs  led_handler.rs  main.rs  matrix_display.rs  status_response.rs  system_calls.rs  use_libcamera.rs  website.rs
src/led/: on_off_led.rs  pwm_led.rs
